# ProceedingsTitleParser

./: .gitignore  .project  .travis.yml  README.md  dblp  dictionary.yaml  doc  examples.yaml  getsamples  install  pyproject.toml  queries.yaml  requirements.txt  run  ts
.github/workflows/: build.yml
dg/: dgraph.py
ptp/: ceurws.py  confref.py  crossref.py  dblp.py  event.py  gnd.py  levent.py  listintersect.py  location.py  lookup.py  ontology.py  openresearch.py  parsedevent.py  plot.py  query.py  relevance.py  signature.py  titleparser.py  webscrape.py  webserver.py  wikicfp.py  wikidata.py  wikidataproceedings.py  wordparser.py
scripts/: cr  crawlWikiCFP  crjena  dblp  dgraph  geograpy-nltk  getsamples  install  jena  run  test
storage/: config.py  dgraph.py  entity.py  jena.py  jsonable.py  jsonablemixin.py  query.py  sparql.py  sql.py  uml.py
templates/: index.html  macros.html  menu.html  settings.html
tests/: basetest.py  testWordParser.py  test_Acronyms.py  test_CEURWS.py  test_ConfRef.py  test_Crossref.py  test_Dblp.py  test_Dgraph.py  test_Event.py  test_Examples.py  test_GND.py  test_GeoLookup.py  test_GeoText.py  test_Jena.py  test_Locations.py  test_Lookup.py  test_Ontology.py  test_OpenResearch.py  test_Plot.py  test_PyParsing.py  test_Spacy.py  test_Stats.py  test_TitleParser.py  test_Transfer.py  test_WebServer.py  test_WikiCFP.py  test_WikiData.py  test_WordParser.py
titleparser/: event.py  openresearch.py  titleparser.py  webserver.py
