[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ProceedingsTitleParser"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
  "networkx",
  "pyparsing",
  "pandas",
  "PyYAML",
  "num2words",
  "Flask",
  "beautifulsoup4>=4.9.3",
  "jsons",
  "dicttoxml>=1.7.4",
  "tqdm>=4.38.0",
  "habanero",
  "pylodstorage>=0.0.85",
  "nltk",
  "spacy",
  "geotext",
  "geograpy3~=0.2.2",
  "tabulate",
  "matplotlib",
  "py-3rdparty-mediawiki>=0.8.1"
]
requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version", "description"]

[tool.hatch.version]
path = "ptp/__init__.py"

[project.urls]
Home = "http://ptp.bitplan.com"
Documentation = "https://wiki.bitplan.com/index.php/ProceedingsTitleParser"
Source = "https://wiki.bitplan.com/index.php/ProceedingsTitleParser"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["ptp","ptp_lookup"]

[tool.hatch.build.targets.wheel.sources]
"ptp" = "ptp"
"ptp_lookup" = "ptp_lookup"
